# potpourri

./: .gitignore  readme.txt
c-prog/: a.out  c_prog_01.c
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  cmake_stuff.txt  hello.cpp
learn-rust/: Cargo.toml
learn-rust/src/: guess-game.rs  main.rs  variables.rs
lisp/: sample.rkt  sicp.org  test.lisp
python/: foo.py  foo_pybind11.py
